# sigmutsel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SETUP_GUIDE.md  TUTORIAL.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: basic_usage.py  example_gdc_manifest.txt  example_gtex_skin_covariates.parquet  with_covariates.py
src/sigmutsel/: __init__.py  __main__.py  compute_alphas.py  compute_mutation_burden.py  config.py  constants.py  contexts_by_gene.py  download_tcga_data.py  estimate_covariates_effect.py  estimate_gammas.py  estimate_mus.py  estimate_presence.py  figures.py  load_maf_files.py  load_signature_matrix.py  locations.py  models.py  mutational_matrices_generator.py  setup.py  signature_attribution.py  signature_decomposition.py  split_maf_file.py  update_gene_names.py  utils.py  variant_annotation.py
src/sigmutsel/data/: .gitignore  Census_allFri May 30 16_47_00 2025.tsv  README.md  __init__.py  exclusion_signatures_matrix_by_cancer_type.txt
tests/: __init__.py  test_smoke_imports.py  test_split_maf_file.py
